force-app/main/default/objects/CRMfusionDBR101__Scenario__c/CRMfusionDBR101__Scenario__c.object-meta.xml
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <label>DupeBlocker Scenario</label>
    <nameField>
        <label>Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DupeBlocker Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>