force-app/main/default/objects/CRMfusionDBR101__Scenario__c/fields/CRMfusionDBR101__Duplicates_Blocked__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Duplicates_Blocked__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The total number of duplicates prevented by this scenario.</inlineHelpText>
    <label>Duplicates Blocked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>