force-app/main/default/objects/CRMfusionDBR101__Scenario__c/fields/CRMfusionDBR101__Duplicates_Merged__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Duplicates_Merged__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total number of duplicates that were identified by this scenario and then merged or converted.</inlineHelpText>
    <label>Duplicates Merged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>