force-app/main/default/objects/CRMfusionDBR101__Scenario__c/fields/CRMfusionDBR101__Match_on_Update_Result__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Match_on_Update_Result__c</fullName>
    <description>Do Not Insert - Prevents edits if the edit would result in a duplicate.
Report Duplicate - Create a duplicate warning and allow the edited data to be saved.
Do Nothing - Take no action.</description>
    <inlineHelpText>Do Not Insert - Prevents edits if the edit would result in a duplicate.
Report Duplicate - Create a duplicate warning and allow the edited data to be saved.
Do Nothing - Take no action.</inlineHelpText>
    <label>Match on Update Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Update</fullName>
            </value>
            <value>
                <fullName>Report Duplicate</fullName>
                <default>true</default>
                <label>Report Duplicate</label>
            </value>
            <value>
                <fullName>Do Nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>