force-app/main/default/objects/CRMfusionDBR101__Scenario__c/fields/CRMfusionDBR101__Scenario_Number__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Scenario_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Scenario Number</label>
    <type>AutoNumber</type>
</CustomField>