force-app/main/default/objects/CRMfusionDBR101__Scenario__c/validationRules/CRMfusionDBR101__Custom_Apex_Handler.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Custom_Apex_Handler</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(  TEXT( CRMfusionDBR101__Match_on_Insert_Action__c ) = &apos;Custom Apex Code&apos;, TEXT( CRMfusionDBR101__Match_on_Update_Action__c ) = &apos;Custom Apex Code&apos; ), ISBLANK(  CRMfusionDBR101__Apex_Handler__c ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Apex_Handler__c</errorDisplayField>
    <errorMessage>If the Match on Insert Action or Match on Update Action is set to &quot;Custom Apex Code&quot; then an Apex class must be selected.</errorMessage>
</ValidationRule>