force-app/main/default/objects/CRMfusionDBR101__Scenario__c/validationRules/CRMfusionDBR101__Hash_Key_Bit_Size.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Hash_Key_Bit_Size</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL( CRMfusionDBR101__Hash_Key_Bits__c ), OR( CRMfusionDBR101__Hash_Key_Bits__c &lt; 8,  CRMfusionDBR101__Hash_Key_Bits__c &gt; 24 ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Hash_Key_Bits__c</errorDisplayField>
    <errorMessage>Hash Key Bits must be between 8 and 24.</errorMessage>
</ValidationRule>