force-app/main/default/objects/CRMfusionDBR101__Scenario__c/validationRules/CRMfusionDBR101__Max_Blocks_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Max_Blocks_Limit</fullName>
    <active>true</active>
    <description>Limit the Max Blocks to &gt;= 1 and &lt;= 20.</description>
    <errorConditionFormula>AND( NOT( ISNULL( CRMfusionDBR101__Max_Blocks_Shown__c ) ), OR( CRMfusionDBR101__Max_Blocks_Shown__c &lt; 1, CRMfusionDBR101__Max_Blocks_Shown__c &gt; 20 ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Max_Blocks_Shown__c</errorDisplayField>
    <errorMessage>If a value is set, it must be between 1 and 20.</errorMessage>
</ValidationRule>