force-app/main/default/objects/CRMfusionDBR101__Scenario__c/validationRules/CRMfusionDBR101__Person_Account_Flag_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Person_Account_Flag_Check</fullName>
    <active>true</active>
    <description>Verify that this is an Account or Lead to Account scenario before allowing the person account option to be checked.</description>
    <errorConditionFormula>AND( CRMfusionDBR101__Person_Account_Scenario__c, NOT( OR( TEXT( CRMfusionDBR101__Scenario_Type__c ) = &apos;Account&apos;, TEXT( CRMfusionDBR101__Scenario_Type__c ) = &apos;Lead to Account&apos; ) ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Person_Account_Scenario__c</errorDisplayField>
    <errorMessage>The &apos;Person Account Scenario&apos; option can only be enabled for Account or Lead to Account scenarios.</errorMessage>
</ValidationRule>