force-app/main/default/objects/CRMfusionDBR101__Scenario__c/listViews/CRMfusionDBR101__ContactScenarios.listView-meta.xml
<ListView>
    <fullName>CRMfusionDBR101__ContactScenarios</fullName>
    <columns>NAME</columns>
    <columns>CRMfusionDBR101__Scenario_Type__c</columns>
    <columns>CRMfusionDBR101__Deployed__c</columns>
    <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
    <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRMfusionDBR101__Scenario_Type__c</field>
        <operation>equals</operation>
        <value>Contact</value>
    </filters>
    <label>Contact Scenarios</label>
</ListView>