force-app/main/default/objects/CRMfusionDBR101__Scenario__c/listViews/CRMfusionDBR101__LeadtoAccountScenarios.listView-meta.xml
<ListView>
    <fullName>CRMfusionDBR101__LeadtoAccountScenarios</fullName>
    <columns>NAME</columns>
    <columns>CRMfusionDBR101__Scenario_Type__c</columns>
    <columns>CRMfusionDBR101__Deployed__c</columns>
    <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
    <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRMfusionDBR101__Scenario_Type__c</field>
        <operation>equals</operation>
        <value>Lead to Account</value>
    </filters>
    <label>Lead to Account Scenarios</label>
</ListView>