force-app/main/default/objects/CRMfusionDBR101__Scenario__c/listViews/CRMfusionDBR101__ScenariosNeedingaRebuild.listView-meta.xml
<ListView>
    <fullName>CRMfusionDBR101__ScenariosNeedingaRebuild</fullName>
    <columns>NAME</columns>
    <columns>CRMfusionDBR101__Scenario_Type__c</columns>
    <columns>CRMfusionDBR101__Deployed__c</columns>
    <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
    <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CRMfusionDBR101__Last_Key_Rebuild__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRMfusionDBR101__Rebuild_Needed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CRMfusionDBR101__Deployed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Scenarios Needing a Rebuild</label>
</ListView>